--- a/.github/workflows/update-org-overview.yml
+++ b/.github/workflows/update-org-overview.yml
@@ -92,14 +92,15 @@ jobs:
               core.info("No changes needed.");
             }
 
-      - name: Commit changes (if any)
-        run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add .github/profile/README.md
-            git commit -m "chore(profile): refresh org repo table"
-            git push
-          else
-            echo "No changes to commit."
-          fi
+        - name: Commit changes (if any)
+          run: |
+            if [[ -n "$(git status --porcelain)" ]]; then
+              git config user.name "github-actions[bot]"
+              git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+              git add "profile/README.md"   # ✅ not .github/profile/...
+              git commit -m "chore(profile): refresh org repo table"
+              git push
+            else
+              echo "No changes to commit."
+            fi
+
