--- a/.github/workflows/update-org-overview.yml
+++ b/.github/workflows/update-org-overview.yml
@@ -41,7 +41,6 @@ jobs:
               "parker-group/public-overview": "Index of Parker Group projects & resources"
             };
 
-            // Fetch metadata
             const rows = [];
             for (const full of repos) {
               const [owner, repo] = full.split("/");
@@ -57,7 +56,6 @@ jobs:
               rows.push(`| [${name}](${html_url}) | ${desc} | ${dateStr} |`);
             }
 
-            // Compose table
             const header = [
               "## Parker Group Projects",
               "",
@@ -67,14 +65,12 @@ jobs:
             ].join("\n");
 
             const footer = "<!-- REPO_TABLE_END -->";
-
             const table = header + "\n" + rows.join("\n") + "\n" + footer + "\n";
 
             const fs = require("fs");
             const path = "profile/README.md";
             let readme = fs.readFileSync(path, "utf8");
 
-            // Replace content between markers
             const start = "<!-- REPO_TABLE_START -->";
             const end = "<!-- REPO_TABLE_END -->";
             const regex = new RegExp(`${start}[\\s\\S]*?${end}`);
@@ -83,8 +79,7 @@ jobs:
               return;
             }
 
-            const newReadme = readme.replace(regex, table.split("\n").slice(2).join("\n")); // keep header above table intact
-
+            const newReadme = readme.replace(regex, table.split("\n").slice(2).join("\n"));
             if (newReadme !== readme) {
               fs.writeFileSync(path, newReadme);
               core.info("README updated with fresh repo table.");
@@ -92,15 +87,14 @@ jobs:
               core.info("No changes needed.");
             }
 
-        - name: Commit changes (if any)
-          run: |
-            if [[ -n "$(git status --porcelain)" ]]; then
-              git config user.name "github-actions[bot]"
-              git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-              git add "profile/README.md"   # ✅ not .github/profile/...
-              git commit -m "chore(profile): refresh org repo table"
-              git push
-            else
-              echo "No changes to commit."
-            fi
-
+      - name: Commit changes (if any)
+        run: |
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add "profile/README.md"
+            git commit -m "chore(profile): refresh org repo table"
+            git push
+          else
+            echo "No changes to commit."
+          fi
